deploy/website/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websiteinfo
  namespace: website
  labels:
    app: websiteinfo
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.websiteinfod: semver:~1.0
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: websiteinfo
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: websiteinfo
    spec:
      containers:
      - name: websiteinfod
        image: swr.cn-south-1.myhuaweicloud.com/opengauss/website:v1.0.202004301754314081
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/nginx/ssl
          name: secret-volume
        - mountPath: /etc/nginx/conf.d
          name: configmap-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: websitesvcsecret
      - name: configmap-volume
        configMap:
          name: websitesvcconfigmap
