deploy/website/meetingserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengauss-meetingserver-service
spec:
  externalName: meeting-service.meetingserver.svc.cluster.local
  type: ExternalName
