deploy/website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: websiteservice
  namespace: website
spec:
  ports:
  - name: http-port
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: websiteinfo
  type: ClusterIP
